修改项目结构

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
           content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>HappyWeather</title>
 
-    <link type="text/css" rel="stylesheet" href="../css/demo.css"/>
-    <link type="text/css" rel="stylesheet" href="../css/weatherGame.css"/>
+    <link type="text/css" rel="stylesheet" href="./css/demo.css"/>
+    <link type="text/css" rel="stylesheet" href="./css/weatherGame.css"/>
 
-    <script type="text/javascript" src="../js/jquery-3.1.1.min.js"></script>
-    <script src="../js/bmob-min.js"></script>
-    <script type="text/javascript" src="../js/support.js"></script>
-    <script type="text/javascript" src="../js/customdialog.js"></script>
-    <script type="text/javascript" src="../js/weatherGame.js"></script>
-    <script type="text/javascript" src="../js/weatherG.js"></script>
+    <script type="text/javascript" src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./js/bmob-min.js"></script>
+    <script type="text/javascript" src="./js/support.js"></script>
+    <script type="text/javascript" src="./js/customdialog.js"></script>
+    <script type="text/javascript" src="./js/weatherGame.js"></script>
+    <script type="text/javascript" src="./js/weatherG.js"></script>
 </head>
 <body>
     <!--头部-->
     <div id="game_hrader">
-        <img src="../img/back.png">
+        <img src="./img/back.png">
         <span>PuzzleGame</span>
     </div>
     <!--头部结束-->
@@ -44,7 +44,7 @@
             <li><img src="../img/man.jpg"></li>
             <li><img src="../img/man.jpg"></li>
             <li><img src="../img/man.jpg"></li>-->
-            <li id="loading"><img src="../img/loading.png"></li>
+            <li id="loading"><img src="./img/loading.png"></li>
         </ul>
     </div>
     <!--底部tab栏结束-->
