--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link type="text/css" rel="stylesheet" href="./css/weatherGame.css"/>
 
     <script type="text/javascript" src="./js/jquery-3.1.1.min.js"></script>
-    <script src="./js/bmob-min.js"></script>
     <script type="text/javascript" src="./js/support.js"></script>
     <script type="text/javascript" src="./js/customdialog.js"></script>
     <script type="text/javascript" src="./js/weatherGame.js"></script>
@@ -40,11 +39,12 @@
     <!--底部tab栏-->
     <div id="game_footer">
         <ul id="img_list">
-            <!--<li class="select"><img src="../img/man.jpg"></li>
-            <li><img src="../img/man.jpg"></li>
-            <li><img src="../img/man.jpg"></li>
-            <li><img src="../img/man.jpg"></li>-->
-            <li id="loading"><img src="./img/loading.png"></li>
+            <li class="select"><img src="./img/img1.jpg" class='imgcontent'></li>
+            <li><img src="./img/img2.jpg" class='imgcontent'></li>
+            <li><img src="./img/img3.jpg" class='imgcontent'></li>
+            <li><img src="./img/img4.jpg" class='imgcontent'></li>
+            <li><img src="./img/img5.jpg" class='imgcontent'></li>
+            <li><img src="./img/img6.jpg" class='imgcontent'></li>
         </ul>
     </div>
     <!--底部tab栏结束-->
