Fix some issues

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </div>
     <div id="game_c">
         <div id="game_control">
-            <span id="btn">开始</span>
+            <span id="btn">Start</span>
             <span id="level">level: 3x3</span>
-            <span id="scroe">步数：0</span>
+            <span id="scroe">Step: 0</span>
         </div>
         <div id="game_result"><span>show</span></div>
     </div>
